# fizzbust-rest-rust

./: README.md
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
fizzbuzz/src/adapters/: mod.rs
fizzbuzz/src/adapters/driven/: fizzbuzz.rs
fizzbuzz/src/adapters/driven/fizzbuzz/: mod.rs
fizzbuzz/src/domains/: mod.rs
fizzbuzz/src/ports/: mod.rs
