[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.12.1"
